--- a/angular-app-wons/src/app/SystemAdministrator/SystemAdministrator.component.html
+++ b/angular-app-wons/src/app/SystemAdministrator/SystemAdministrator.component.html
@@ -77,9 +77,19 @@
   
               
                 <div class="form-group text-left">
-                  <label for="authorized">authorized</label>
+                  <label for="transactionAuthorized">transactionAuthorized</label>
                   
-                    <input formControlName="authorized" type="text" class="form-control">
+                    <input formControlName="transactionAuthorized" type="text" class="form-control">
+                  
+                </div>
+              
+            
+  
+              
+                <div class="form-group text-left">
+                  <label for="transactionRevoke">transactionRevoke</label>
+                  
+                    <input formControlName="transactionRevoke" type="text" class="form-control">
                   
                 </div>
               
@@ -159,10 +169,19 @@
               </div>
             
               <div class="form-group text-left">
-                <label for="authorized">authorized</label>
+                <label for="transactionAuthorized">transactionAuthorized</label>
   
                 
-                  <input [ngModel]="authorized"formControlName="authorized" type="text" class="form-control">
+                  <input [ngModel]="transactionAuthorized"formControlName="transactionAuthorized" type="text" class="form-control">
+                
+  
+              </div>
+            
+              <div class="form-group text-left">
+                <label for="transactionRevoke">transactionRevoke</label>
+  
+                
+                  <input [ngModel]="transactionRevoke"formControlName="transactionRevoke" type="text" class="form-control">
                 
   
               </div>
@@ -248,7 +267,9 @@
               
                   <th class="info">universityComponent</th>
               
-                  <th class="info">authorized</th>
+                  <th class="info">transactionAuthorized</th>
+              
+                  <th class="info">transactionRevoke</th>
               
                 <th class="info-actions">Actions</th>
             </tr>
@@ -267,7 +288,9 @@
               
                   <td class="participant-properties">{{participant.universityComponent}}</td>
               
-                  <td class="participant-properties">{{participant.authorized}}</td>
+                  <td class="participant-properties">{{participant.transactionAuthorized}}</td>
+              
+                  <td class="participant-properties">{{participant.transactionRevoke}}</td>
               
               <td>
                 <button (click)="getForm(participant.jmbag);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateParticipantModal">
