--- a/angular-app-wons/src/app/app.component.html
+++ b/angular-app-wons/src/app/app.component.html
@@ -14,8 +14,8 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <p class="network-name">pii-szg-network@0.0.1.bna</p>
-        <p class="navbar-brand">angular-app-wons</p>
+        <p class="network-name">pii-szg-network@0.0.2.bna</p>
+        <p class="navbar-brand">angular-app-wons2</p>
       </div>
       <ul class="nav navbar-nav">
         <li class="dropdown active">
@@ -43,8 +43,6 @@
       <li class="dropdown active">
         <a class="dropdown-toggle" data-toggle="dropdown">Transactions</a>
         <ul class="dropdown-menu scrollable-menu">
-          
-          <li><a [routerLink]="['/GrantAccessFER']">GrantAccessFER</a></li>
           
           <li><a [routerLink]="['/AuthorizeAccessFER']">AuthorizeAccessFER</a></li>
           
