--- a/angular-app-wons/src/app/home/home.component.html
+++ b/angular-app-wons/src/app/home/home.component.html
@@ -1,48 +1,173 @@
 <!--
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-
- http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
+	Licensed under the Apache License, Version 2.0 (the "License");
+	you may not use this file except in compliance with the License.
+	You may obtain a copy of the License at
+	
+	http://www.apache.org/licenses/LICENSE-2.0
+	
+	Unless required by applicable law or agreed to in writing, software
+	distributed under the License is distributed on an "AS IS" BASIS,
+	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+	See the License for the specific language governing permissions and
+	limitations under the License.
 -->
+<script>
+	async function beginer() 
+	{ 
+		try {
+			const BusinessNetworkConnection = require('composer-client').BusinessNetworkConnection;
+			this.bizNetworkConnection = new BusinessNetworkConnection();
+			const cardName = "admin@pii-szg-network";
+			this.businessNetworkDefinition = await this.bizNetworkConnection.connect(cardName);
+			
+			this.memberRegistry = await this.bizNetworkConnection.getParticipantRegistry('org.szg.Member');
+			this.assetRegistry = await this.bizNetworkConnection.getAssetRegistry('org.szg.UniversityComponent');
+			let factory = this.businessNetworkDefinition.getFactory();
+			
+			var assetFER = factory.newResource('org.szg', 'UniversityComponent', 'universityKey:0036');
+			assetFER.opening = 500;
+			assetFER.closing = 2300;
+			// Create a new relationship for the owner
+			let FERRelation = factory.newRelationship('org.szg', 'UniversityComponent', 'universityKey:0036');
+			
+			var assetFSB = factory.newResource('org.szg', 'UniversityComponent', 'universityKey:0035');
+			assetFSB.opening = 800;
+			assetFSB.closing = 2100;
+			
+			await this.assetRegistry.addAll([assetFER, assetFSB]);
+			
+			var somebody = factory.newResource('org.szg', 'Member', 'jmbag:0036444444');
+			somebody.firstName = 'marko';
+			somebody.lastName = 'markic';
+			somebody.memberType = 'Student';
+			somebody.universityComponent = FERRelation;
+			await memberRegistry.add(somebody);
+		}
+		catch(error) {
+			console.log(error);
+			throw error;
+		}
+	}	
+	
+	async function checkTransaction(){
+		const BusinessNetworkConnection = require('composer-client').BusinessNetworkConnection;
+		this.bizNetworkConnection = new BusinessNetworkConnection();
+		const cardName = "admin@pii-szg-network";
+		this.businessNetworkDefinition = await this.bizNetworkConnection.connect(cardName);
+		
+		var jmbag = document.getElementById('jmbag').value;
+		var universityKey = document.getElementById('universityKey').value;
+
+		try {
+			let registryMember = await this.bizNetworkConnection.getParticipantRegistry('org.szg.Member');
+			let resultMember = registryMember.get('jmbag:'+jmbag);
+			let registryUniversityComponent = await this.bizNetworkConnection.getAssetRegistry('org.szg.UniversityComponent');
+			let resultUniversityComponent = registryUniversityComponent.get('universityKey:'+universityKey);
+		
+			let methodCall;
+			let access = false;
+			var d = new Date();
+			let ttime = d.getHours()*100+d.getMinutes();
+			
+			//logic for Access entry 
+			var me = await query('selectMember',{jmbagParam : resultMember.jmbag});
+			if(!me) {
+        		throw new Error('Non existant user.');
+			}
+			if(me.universityComponent.universityKey == universityKey){
+				let isOpened = await query('selectIsOpened',{universityKeyparam : resultUniversityComponent.universityKey,timeparam : ttime});
+				if(!isOpened) {
+					access = false;
+				}
+				else access = true;
+				
+				if(resultMember.memberType == "Profesor" || resultMember.memberType == "Staff")
+					access = true;
+			}
+			else if(resultMember.memberType == "Profesor" || resultMember.memberType == "Student"){
+				let isOpened = await query('selectIsOpened',{universityKeyparam : resultUniversityComponent.universityKey,timeparam : ttime});
+				if(!isOpened) {
+					access = false;
+				}
+				else access = true;
+			}
+			else if(resultUniversityComponent.universityName == "FER"){
+				let isOpened = await query('selectIsFEROpened',{timeparam : ttime});
+				if(!isOpened) {
+					access = false;
+				}
+				else access = true;
+			}
+
+			if(access == true)
+				methodCall = "AuthorizeAccess"+resultUniversityComponent.universityName;
+			else 
+				methodCall = "RevokeAccess"+resultUniversityComponent.universityName;	
+			await callTrasaction(methodCall,resultMember.jmbag,resultUniversityComponent.universityKey);
+		} catch (error) {
+			console.log(error);
+			throw error;	
+		}
+
+	}
+	
+	async function callTrasaction(_method, _jmbag, _universityKey){
+		try {
+			const BusinessNetworkConnection = require('composer-client').BusinessNetworkConnection;
+			this.bizNetworkConnection = new BusinessNetworkConnection();
+			const cardName = "admin@pii-szg-network";
+			this.businessNetworkDefinition = await this.bizNetworkConnection.connect(cardName);
+			let factory = this.businessNetworkDefinition.getFactory();
+			
+			//let registry = await this.bizNetworkConnection.getParticipantRegistry('org.szg.Member');
+			//let result = registry.get('jmbag:'+_jmbag);
+			let factory        = this.businessNetworkDefinition.getFactory();
+			let transaction    = factory.newTransaction('org.szg',_method);
+			transaction.universityComponent  = factory.newRelationship('org.szg', 'UniversityComponent', 'universityKey:'+_universityKey);
+			transaction.member = factory.newRelationship('org.szg', 'Member', 'jmbag:'+_jmbag);
+			
+			await this.bizNetworkConnection.submitTransaction(transaction);
+		} catch (error) {
+			console.log(error);
+			throw error;
+		}
+	}
+
+</script>	
 <div class="container">
 	<div class="jumbotron">
 		<h1>angular-app-wons</h1>
 	</div>
-      <form [formGroup]="myForm">
-        <div class="modal-body">
-
-
-          
-
-            
-              <div class="form-group text-left">
-                <label for="jmbag">jmbag</label>
-                
-                  <input formControlName="jmbag" type="text" class="form-control">
-                
-              </div>
-            
-          
-
-            
-              <div class="form-group text-left">
-                <label for="universityKey">universityKey</label>
-                
-                  <input formControlName="universityKey" type="text" class="form-control">
-                
-              </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button (click)="tryTransaction(myForm);" type="submit" class="btn btn-success" data-dismiss="modal">Confirm</button>
-
-        </div>
-      </form>
-            
+	
+	<form>
+		<div class="modal-body">
+			jmbag:<br>
+			<input type="text" id="jmbag" name="jmbag" value="0000000000">
+			<br>
+			universityKey:<br>
+			<input type="text" id="universityKey" name="universityKey" value="0036">
+			<!--
+				<select name="nbrAnswers" id="nbrAnswers" class="chooseBox">
+					<option value="AuthorizeAccessFER" selected >AuthorizeAccessFER</option>
+					<option value="RevokeAccessFER">RevokeAccessFER</option>
+					<option value="AuthorizeAccessFFZG">AuthorizeAccessFFZG</option>
+					<option value="RevokeAccessFFZG" selected >RevokeAccessFFZG</option>
+					<option value="AuthorizeAccessFSB">AuthorizeAccessFSB</option>
+					<option value="RevokeAccessFSB">RevokeAccessFSB</option>
+				</select>  
+			-->
+		</div>		
+		
+		<br>
+		<div class="modal-footer">
+			<input type="submit" class="btn btn-default" onClick="checkTransaction()">
+		</div>
+	</form>
+	<!--
+		<div class="modal-footer">
+			<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			<button (click)="tryTransaction(myForm);" type="submit" class="btn btn-success" data-dismiss="modal">Confirm</button>
+			
+			<input type="submit" value="Submit">
+		-->
 </div>
