--- a/angular-app-wons/src/app/RevokeAccessFER/RevokeAccessFER.component.html
+++ b/angular-app-wons/src/app/RevokeAccessFER/RevokeAccessFER.component.html
@@ -27,9 +27,9 @@
 
             
               <div class="form-group text-left">
-                <label for="jmbag">jmbag</label>
+                <label for="member">member</label>
                 
-                  <input formControlName="jmbag" type="text" class="form-control">
+                    <textarea formControlName="member" class="form-control" rows="3"></textarea>
                 
               </div>
             
@@ -37,9 +37,9 @@
 
             
               <div class="form-group text-left">
-                <label for="universityKey">universityKey</label>
+                <label for="universityComponent">universityComponent</label>
                 
-                  <input formControlName="universityKey" type="text" class="form-control">
+                    <textarea formControlName="universityComponent" class="form-control" rows="3"></textarea>
                 
               </div>
             
@@ -92,19 +92,23 @@
 
           
             <div class="form-group text-left">
-              <label for="jmbag">jmbag</label>
+              <label for="member">member</label>
 
               
-                <input [ngModel]="jmbag"formControlName="jmbag" type="text" class="form-control">
+                
+                  <textarea [ngModel]="member" formControlName="member" class="form-control" rows="3"></textarea>
+                
               
 
             </div>
           
             <div class="form-group text-left">
-              <label for="universityKey">universityKey</label>
+              <label for="universityComponent">universityComponent</label>
 
               
-                <input [ngModel]="universityKey"formControlName="universityKey" type="text" class="form-control">
+                
+                  <textarea [ngModel]="universityComponent" formControlName="universityComponent" class="form-control" rows="3"></textarea>
+                
               
 
             </div>
@@ -199,9 +203,9 @@
           <br>
           <ul>
             
-              <li><span class="attribute"><b>jmbag</b></span></li>
+              <li><span class="attribute"><b>member</b></span></li>
             
-              <li><span class="attribute"><b>universityKey</b></span></li>
+              <li><span class="attribute"><b>universityComponent</b></span></li>
             
               <li><span class="attribute"><b>transactionId</b></span></li>
             
