--- a/angular-app-wons/src/app/UniversityComponent/UniversityComponent.component.html
+++ b/angular-app-wons/src/app/UniversityComponent/UniversityComponent.component.html
@@ -112,6 +112,26 @@
             
           
 
+            
+              <div class="form-group text-left">
+                <label for="transactionAuthorized">transactionAuthorized</label>
+                
+                  <input formControlName="transactionAuthorized" type="text" class="form-control">
+                
+              </div>
+            
+          
+
+            
+              <div class="form-group text-left">
+                <label for="transactionRevoke">transactionRevoke</label>
+                
+                  <input formControlName="transactionRevoke" type="text" class="form-control">
+                
+              </div>
+            
+          
+
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -231,6 +251,24 @@
 
             </div>
           
+            <div class="form-group text-left">
+              <label for="transactionAuthorized">transactionAuthorized</label>
+              
+              
+                <input [ngModel]="transactionAuthorized"formControlName="transactionAuthorized" type="text" class="form-control">
+              
+
+            </div>
+          
+            <div class="form-group text-left">
+              <label for="transactionRevoke">transactionRevoke</label>
+              
+              
+                <input [ngModel]="transactionRevoke"formControlName="transactionRevoke" type="text" class="form-control">
+              
+
+            </div>
+          
 
 
         </div>
@@ -312,6 +350,10 @@
             
                 <th class="info">closing</th>
             
+                <th class="info">transactionAuthorized</th>
+            
+                <th class="info">transactionRevoke</th>
+            
               <th class="info-actions">Actions</th>
           </tr>
         </thead>
@@ -328,6 +370,10 @@
                 <td class="asset-properties">{{asset.opening}}</td>
             
                 <td class="asset-properties">{{asset.closing}}</td>
+            
+                <td class="asset-properties">{{asset.transactionAuthorized}}</td>
+            
+                <td class="asset-properties">{{asset.transactionRevoke}}</td>
             
             <td>
               <button (click)="getForm(asset.universityKey);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateAssetModal">
