--- a/angular-app-wons/src/app/app.component.html
+++ b/angular-app-wons/src/app/app.component.html
@@ -14,8 +14,8 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <p class="network-name">pii-szg-network@0.0.2.bna</p>
-        <p class="navbar-brand">angular-app-wons2</p>
+        <p class="network-name">pii-szg-network@0.0.3-deploy.0.bna</p>
+        <p class="navbar-brand">angular-app-wons</p>
       </div>
       <ul class="nav navbar-nav">
         <li class="dropdown active">
@@ -30,11 +30,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown">Participants</a>
           <ul class="dropdown-menu scrollable-menu">
             
-            <li><a [routerLink]="['/Student']">Student</a></li>
-            
-            <li><a [routerLink]="['/Profesor']">Profesor</a></li>
-            
-            <li><a [routerLink]="['/Staff']">Staff</a></li>
+            <li><a [routerLink]="['/Member']">Member</a></li>
             
             <li><a [routerLink]="['/SystemAdministrator']">SystemAdministrator</a></li>
             
@@ -58,6 +54,15 @@
           
         </ul>
     </li>
+        <li class="dropdown active">
+          <a class="dropdown-toggle" data-toggle="dropdown">Home</a>
+          <ul class="dropdown-menu scrollable-menu">
+            
+            <li><a [routerLink]="['/']">Home</a></li>
+            
+            
+          </ul>
+      </li>
       </ul>
     </div>
   </nav>
