--- a/angular-app-wons/src/app/app.component.css
+++ b/angular-app-wons/src/app/app.component.css
@@ -84,6 +84,35 @@
     background-color: #fff;
     color: #6C4CC4 !important;
 }
+.nav navbar-nav {
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: center;
+}
+#navcontainer ul
+{
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: center;
+}
+
+#navcontainer ul li { display: inline; }
+
+#navcontainer ul li a
+{
+text-decoration: none;
+padding: .2em 1em;
+color: #fff;
+background-color: #036;
+}
+
+#navcontainer ul li a:hover
+{
+color: #fff;
+background-color: #369;
+}
 
 .dropdown-menu {
     border-radius: 0px;
