--- a/angular-app-wons/src/app/home/home.component.html
+++ b/angular-app-wons/src/app/home/home.component.html
@@ -20,10 +20,10 @@
 	<form>
 		<div class="modal-body">
 			jmbag:<br>
-			<input type="text" id="jmbag" name="jmbag" value="0000000000">
+			<input type="text" id="jmbag" name="jmbag">
 			<br>
 			universityKey:<br>
-			<input type="text" id="universityKey" name="universityKey" value="0036">
+			<input type="text" id="universityKey" name="universityKey">
 			<!--
 				<select name="nbrAnswers" id="nbrAnswers" class="chooseBox">
 					<option value="AuthorizeAccessFER" selected >AuthorizeAccessFER</option>
