--- a/angular-app-wons/src/app/CheckAccessFFZG/CheckAccessFFZG.component.html
+++ b/angular-app-wons/src/app/CheckAccessFFZG/CheckAccessFFZG.component.html
@@ -47,6 +47,16 @@
 
             
               <div class="form-group text-left">
+                <label for="access">access</label>
+                
+                  <input formControlName="access" type="text" class="form-control">
+                
+              </div>
+            
+          
+
+            
+              <div class="form-group text-left">
                 <label for="transactionId">transactionId</label>
                 
                   <input formControlName="transactionId" type="text" class="form-control">
@@ -109,6 +119,15 @@
                 
                   <textarea [ngModel]="universityComponent" formControlName="universityComponent" class="form-control" rows="3"></textarea>
                 
+              
+
+            </div>
+          
+            <div class="form-group text-left">
+              <label for="access">access</label>
+
+              
+                <input [ngModel]="access"formControlName="access" type="text" class="form-control">
               
 
             </div>
@@ -182,7 +201,7 @@
   
   <div class="row">
     <div class="col-md-9">
-        <h1 class="transaction-title" id='transactionName'>RevokeAccessFSB</h1>
+        <h1 class="transaction-title" id='transactionName'>CheckAccessFFZG</h1>
     </div>
     <div class="col-md-3">
     </div>
@@ -199,6 +218,8 @@
               <li><span class="attribute"><b>member</b></span></li>
             
               <li><span class="attribute"><b>universityComponent</b></span></li>
+            
+              <li><span class="attribute"><b>access</b></span></li>
             
               <li><span class="attribute"><b>transactionId</b></span></li>
             
