--- a/angular-app-wons/src/app/home/home.component.html
+++ b/angular-app-wons/src/app/home/home.component.html
@@ -16,7 +16,9 @@
 	<div class="jumbotron">
 		<h1>angular-app-wons</h1>
 	</div>
-	
+	<br> <br>
+	<span id="status"></span>
+	<br> <br>
 	<form>
 		<div class="modal-body">
 			jmbag:<br>
