--- a/angular-app-wons/src/app/home/home.component.html
+++ b/angular-app-wons/src/app/home/home.component.html
@@ -26,6 +26,8 @@
 			<br>
 			universityKey:<br>
 			<input type="text" id="universityKey" name="universityKey" placeholder="0036">
+			<br>tid:<br>
+			<input type="text" id="tid" name="tid" placeholder="E200341201301700026A6B97">
 			<!--
 				<select name="nbrAnswers" id="nbrAnswers" class="chooseBox">
 					<option value="AuthorizeAccessFER" selected >AuthorizeAccessFER</option>
