--- a/angular-app-wons/src/app/CheckAccessFSB/CheckAccessFSB.component.html
+++ b/angular-app-wons/src/app/CheckAccessFSB/CheckAccessFSB.component.html
@@ -47,9 +47,9 @@
 
             
               <div class="form-group text-left">
-                <label for="access">access</label>
+                <label for="tid">tid</label>
                 
-                  <input formControlName="access" type="text" class="form-control">
+                  <input formControlName="tid" type="text" class="form-control">
                 
               </div>
             
@@ -124,10 +124,10 @@
             </div>
           
             <div class="form-group text-left">
-              <label for="access">access</label>
+              <label for="tid">tid</label>
 
               
-                <input [ngModel]="access"formControlName="access" type="text" class="form-control">
+                <input [ngModel]="tid"formControlName="tid" type="text" class="form-control">
               
 
             </div>
@@ -219,7 +219,7 @@
             
               <li><span class="attribute"><b>universityComponent</b></span></li>
             
-              <li><span class="attribute"><b>access</b></span></li>
+              <li><span class="attribute"><b>tid</b></span></li>
             
               <li><span class="attribute"><b>transactionId</b></span></li>
             
